Debug in nginx config

--- a/default.conf
+++ b/default.conf
@@ -3,7 +3,7 @@ server {
         listen   [::]:80 default ipv6only=on; 
 
         root /var/www/html/public/;
-        index register.php index.html index.htm;
+        index index.php index.html index.htm;
 
         server_name _;
 
@@ -18,10 +18,10 @@ server {
         }
 
         location / {
-                try_files $uri $uri/ /register.php?$args;
+                try_files $uri $uri/ /index.php?$args;
         }
 
-        error_page 404 /register.php;
+        error_page 404 /index.php;
 
         location ^~ /sad.svg {
             alias /var/www/errors/sad.svg;
@@ -42,7 +42,7 @@ server {
                 fastcgi_pass unix:/var/run/php-fpm.sock;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-                fastcgi_index register.php;
+                fastcgi_index index.php;
                 include fastcgi_params;
         }
 
